# xdiff--practise

./: Cargo.toml  README.md
examples/: similar.rs
fixtures/: test.yml
src/: config.rs
