[package]
name = "xdiff-practise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
console = "0.15.2"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_yaml = "0.9.13"
similar = { version = "2.2.1", features = ["inline"] }
tokio = { version = "1.23.0", features = ["full"] }
